<resources>
    <string name="app_name">Rick and Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Buscar Personagem</string>
    <string name="filter_button">Filter Button</string>
    <string name="characters">Characters</string>
    <string name="reset">Reset</string>
    <string name="image_of_character">Image of character</string>
    <string name="title_filter">Filter</string>
    <string name="title_status">Status</string>
    <string name="txt_alive">Alive</string>
    <string name="txt_dead">Dead</string>
    <string name="txt_unknown">Unknown</string>
    <string name="title_gender">Gender</string>
    <string name="txt_female">Female</string>
    <string name="txt_male">Male</string>
    <string name="txt_genderless">GenderLess</string>
    <string name="title_apply">APPLY</string>
    <string name="txt_specie">Human</string>
    <string name="rick_sanchez">Rick Sanchez</string>
    <string name="image_character_detail">Image character detail</string>
    <string name="_7">7</string>
    <string name="origin">Origin</string>
    <string name="text_error">%1$d - Characters not found</string>
</resources>