<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_light"
    tools:context=".view.fragments.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:background="@drawable/painel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/txt_status"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_alive"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.164"
            app:layout_constraintVertical_bias="0.064" />

        <TextView
            android:id="@+id/txt_id"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.89"
            app:layout_constraintVertical_bias="0.064" />

        <ImageView
            android:id="@+id/img_character_detail"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@drawable/rick"
            app:layout_constraintBottom_toTopOf="@id/txt_character_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_status"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.3"
            android:contentDescription="@string/image_character_detail" />

        <TextView
            android:id="@+id/txt_name_character_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:textSize="20sp"
            style="@style/TextColor"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/rick_sanchez"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/img_character_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_specie_character_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="20sp"
            style="@style/TextColor"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:text="@string/txt_specie"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/txt_name_character_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_character_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            style="@style/TextColor"
            android:text="Male"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintVertical_bias="0.66"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/title_origin"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origin"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.799" />

        <TextView
            android:id="@+id/txt_origin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            style="@style/TextColor"
            android:textSize="18sp"
            android:text="Earth (C - 137)"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title_origin"
            app:layout_constraintTop_toBottomOf="@id/title_origin" />

        <TextView
            android:id="@+id/title_location"
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/txt_origin"
            app:layout_constraintTop_toBottomOf="@id/txt_origin" />

        <TextView
            android:id="@+id/txt_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            style="@style/TextColor"
            android:textSize="18sp"
            android:text="Earth (Replacement Dimension)"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title_location"
            app:layout_constraintTop_toBottomOf="@id/title_location" />

        <TextView
            android:id="@+id/title_episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Episodes"
            style="@style/TextColor"
            android:textStyle="bold"
            app:layout_constraintVertical_bias="0.23000002"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/title_origin"
            app:layout_constraintTop_toBottomOf="@id/txt_character_gender" />

        <TextView
            android:id="@+id/txt_n_episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextColor"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="41"
            app:layout_constraintBottom_toBottomOf="@id/title_episodes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/title_episodes"
            app:layout_constraintTop_toTopOf="@id/title_episodes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>